# cpp20-tests

./: CMakeLists.txt  Readme.md
src/: BasicPlane.Figures-Point.ixx  BasicPlane.Figures-Rectangle.cpp  BasicPlane.Figures-Rectangle.ixx  BasicPlane.Figures.ixx  CMakeLists.txt  cpp20-tests.cpp
tests/: CMakeLists.txt  concepts.cpp  coroutines.cpp  misc.cpp  ranges.cpp
